welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:3: error: identifier expected but '(' found.
		if(nums.(i) == value){
                        ^